5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1773_770.log
== TEST (2019-05-24 23:38:17) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a primeira palavra: ")))
y=array(eval(input("Digite a segunda palavra: ")))
m=zeros(26)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:42:15) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ")))
y=input("Digite a segunda palavra: ")))
m=zeros(26)
print(m)
-- ERROR:
File "XXXX", line 2
    x=input()))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:42:25) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ")
y=input("Digite a segunda palavra: ")
m=zeros(26)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:44:03) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
n=array([a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,t,u,v,x,w,y,z])
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:45:00) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","t",'u','v','x','w','y','z'])
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:45:35) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","t",'u','v','x','w','y','z'])
if(a==n[0]):
	print("ta serto")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:45:53) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","t",'u','v','x','w','y','z'])
if("a"==n[0]):
	print("ta serto")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:14:34) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","t",'u','v','x','w','y','z'])
print(x.count("a"))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:14:50) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","t",'u','v','x','w','y','z'])
print(x.count(n[0]))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:16:15) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","t",'u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
print(m)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:17:12) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
print(m)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:20:13) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
print(m)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:20:20) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
print(m)	
print(k)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:22:12) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[0]
	h=h+1
print(l)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:22:38) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[0]
	h=h+1
print(m)
print(k)
print(l)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:22:58) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:23:36) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
print(l.count(0))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:23:53) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
print(l.count("0"))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:25:58) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
v=26
c=25
while(len(l)>h):
	if(l[h]==0):
		v=v-1
		h=h+1
	else:
		c=c-1
		h=h+1
print(v)	
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:26:28) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
v=26
c=25
while(len(l)>h):
	if(l[h]=="0"):
		v=v-1
		h=h+1
	else:
		c=c-1
		h=h+1
print(v)	
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:28:48) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
v=26
c=25
while(len(l)>h):
	if(l[h]=="0"):
		v=v-1
		h=h+1
	else:
		c=c-1
		h=h+1
print(l.count("0"))	
		
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:29:36) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)

if(x[0]==0):
	print("pse me ifoode")
else:
	print("lel")
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:29:52) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)

if(xl[0]==0):
	print("pse me ifoode")
else:
	print("lel")
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:29:56) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)

if(l[0]==0):
	print("pse me ifoode")
else:
	print("lel")
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:30:18) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
h=0
if(l[h]==0):
	print("pse me ifoode")
else:
	print("lel")
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:30:53) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
h=0
while(len(l)>h):
	if(l[h]==0):
	   print("pse me ifoode")
   else:
	   print("lel")
		
	

-- ERROR:
File "XXXX", line 29
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:31:32) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
h=0
while(len(l)>h):
	if(l[h]==0):
		print("certo")
	else:
		print("errado")

		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:32:40) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
h=0
while(len(l)>h):
	if(l[h]==0):
		print("certo")
		h=h+1
	else:
		h=h+1
		print("errado")

		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:33:38) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
h=0
r=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		h=h+1
		print("errado")
print(r)
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:34:36) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		w=w-1

print(r)
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:34:42) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1
print(m)
print(k)
print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		w=w-1

print(r)
print(w)
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:35:31) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
File "XXXX", line 32
    r=r-
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 15:35:38) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 15:35:49) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- EXECUTION TIME:
0.523625
-- TEST CASE 1:
---- input:
haline
enilah
---- correct output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
1
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:49:43) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 16:50:11) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:21:34) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:21:57) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:54:21) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:54:30) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:54:36) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:54:54) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:54:59) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:55:10) 
-- CODE:
from numpy import*
x=input("Digite a primeira palavra: ").lower()
y=input("Digite a segunda palavra: ").lower()
m=zeros(26)
k=zeros(26)
h=0
n=array(["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s",'t','u','v','x','w','y','z'])
while(len(n)>h):
	f=x.count(n[h])
	m[h]=f
	h=h+1
h=0	
while(len(n)>h):
	j=y.count(n[h])
	k[h]=j
	h=h+1	
h=0
l=zeros(26,dtype=int)
while(len(m)>h):
	l[h]=m[h]-k[h]
	h=h+1

print(l)
h=0
r=26
w=26
while(len(l)>h):
	if(l[h]==0):
		r=r-1
		h=h+1
	else:
		r=r-1

if(r==0):
	print("1")
else:
	print("0")
		
  
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
